# lobster-cc

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  NEXT_STEPS.md  README.md  REQUIREMENTS.md  config.example.yaml  deploy.sh  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: aws-proxy.md  wecom-mcp.md
docs/superpowers/plans/: 2026-04-11-task-archive-recall.md
relay/: README.md  lambda_function.py  samconfig.toml  template.yaml
scripts/: rc-proxy-tunnel.service  run-scheduled-task.sh  setup-proxy.sh  setup-relay.sh  setup.sh  start-proxy-tunnel.sh
scripts/templates/: .agent-profile.default.yaml  claude-md-agent.md  system-prompt-example.md
src/remote_control/: cli_init.py  config.py  main.py  server.py
src/remote_control/core/: executor.py  memory.py  models.py  notifier.py  profile.py  router.py  runner.py  store.py  utils.py  watchdog.py
src/remote_control/dashboard/: routes.py  status.py  tabs.py
src/remote_control/mcp/: profile_server.py  recall_server.py  (+1 more)
tests/: conftest.py  test_agent_evolution.py  test_api.py  test_cli_init.py  test_config.py  test_crypto.py  test_dashboard_routes.py  test_dashboard_status.py  test_dashboard_tabs.py  test_executor.py  test_gateway.py  test_mcp_profile.py  test_mcp_wecom.py  test_memory.py  test_message_source.py  test_notifier.py  test_profile.py  test_recall_server.py  test_router.py  test_runner.py  test_server.py  test_store.py  test_watchdog.py
(+5 files in other folders)
